Измнены пути директорий, Добавлены проекты для JavaFX